--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         font-family: "Libre Baskerville", serif;
         font-weight: 400;
         font-style: normal;
-        color: #70a0b4;
+        color: ##ffffff;
       }
       h2 {
         font-family: "Tangerine", serif;
         font-weight: 700;
         font-style: normal;
-        color: #70a0b4;
+        color: ##ffffff;
         }
 
       body,
@@ -121,7 +121,7 @@
         /*font-weight: 400;*/
         font-size: 25pt;
         font-style: normal;
-        color: #70a0b4;
+        color: #ffffff;
       }
       video {
         width: 100vw;
@@ -146,14 +146,14 @@
       height: 120px; /* Altura de la imagen */
     }
      td {
-        color: #042c34;
+        color: ##ffffff;
         font-size: 40px;
         font-family: "Libre Baskerville", serif; /* Utiliza la fuente Comfortaa */
         text-align: center;
       }
 
       th {
-        color: #042c34;
+        color: ##ffffff;
         text-align: center;
         font-size: 12px;
         font-family: "Libre Baskerville", serif; /* Utiliza la fuente Comfortaa*/
@@ -214,7 +214,7 @@
     <div class="col-12" style="margin-top: 30px;">
       <h2><b>Confirmación de asistencia</b></h2>
       <div class="container text-center mt-3">
-        <a href="https://forms.gle/1GNa8HwnvTuHKf896" class="btn btn-custom2">
+        <a href="https://wa.me/3329685832?text=Claro%20que%20asistir%C3%A9%20a%20la%20fiesta%20de%20graduaci%C3%B3n" class="btn btn-custom2">
           <i class="fas fa-check-circle" ></i>&nbsp;REGISTRO</a
         >
       </div>
@@ -222,8 +222,8 @@
     </div>
      <div class="col-12" style="margin-top: 30px;">
       <label class="custom-label">Código de Vestimenta</label>
-      <p>Formal y corbata roja</p>
-      <p>Cualquier color de vestido exepto rojo</p>
+      <p>Formal</p>
+      <p>Cualquier color excepto rojo</p>
       <div class="container mt-1">
     <div class="row">
         <div class="col-6 d-flex flex-column justify-content-center align-items-center" style="height: 150px;">
@@ -294,4 +294,5 @@
       setInterval(updateCountdown, MILLISECONDS_OF_A_SECOND);
     });
   </script>
+
 </html>
