--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         font-family: "Libre Baskerville", serif;
         font-weight: 400;
         font-style: normal;
-        color: ##ffffff;
+        color: #ffffff;
       }
       h2 {
         font-family: "Tangerine", serif;
         font-weight: 700;
         font-style: normal;
-        color: ##ffffff;
+        color: #ffffff;
         }
 
       body,
@@ -146,14 +146,14 @@
       height: 120px; /* Altura de la imagen */
     }
      td {
-        color: ##ffffff;
+        color: #ffffff;
         font-size: 40px;
         font-family: "Libre Baskerville", serif; /* Utiliza la fuente Comfortaa */
         text-align: center;
       }
 
       th {
-        color: ##ffffff;
+        color: #ffffff;
         text-align: center;
         font-size: 12px;
         font-family: "Libre Baskerville", serif; /* Utiliza la fuente Comfortaa*/
@@ -296,3 +296,4 @@
   </script>
 
 </html>
+
