--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         <p>7:30 p.m. a 1:00 a.m</p>
     <div class="col-12" style="margin-top: 30px;">
       <h2><b>Ubicación</b></h2>
+      <label class="custom-label">Ubicación</label>
       <p>Salón de eventos Fiorenza</p>
       <div class="container text-center mt-5 bounce-top">
         <a 
@@ -296,5 +297,6 @@
   </script>
 
 </html>
+
 
 
