--- a/index.html
+++ b/index.html
@@ -193,13 +193,10 @@
         <!-- Fin contador regresivo -->
       </div>
     &nbsp;
-        <h2>
-          Horario
-        </h2>
+      <label class="custom-label">Horario</label>
         <br/>
         <p>7:30 p.m. a 1:00 a.m</p>
     <div class="col-12" style="margin-top: 30px;">
-      <h2><b>Ubicación</b></h2>
       <label class="custom-label">Ubicación</label>
       <p>Salón de eventos Fiorenza</p>
       <div class="container text-center mt-5 bounce-top">
@@ -213,7 +210,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <div class="col-12" style="margin-top: 30px;">
-      <h2><b>Confirmación de asistencia</b></h2>
+       <label class="custom-label">Confirmación de asistencia</label>
       <div class="container text-center mt-3">
         <a href="https://wa.me/3329685832?text=Claro%20que%20asistir%C3%A9%20a%20la%20fiesta%20de%20graduaci%C3%B3n" class="btn btn-custom2">
           <i class="fas fa-check-circle" ></i>&nbsp;REGISTRO</a
@@ -297,6 +294,7 @@
   </script>
 
 </html>
+
 
 
 
