--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         background-size: cover;
       }
       .bgimg2 {
-        background-image: url(images/FONDO.png);
+        background-image: url(images/FONDO2.png);
       }
       .btn-custom2 {
         display: inline-flex;
@@ -294,6 +294,7 @@
   </script>
 
 </html>
+
 
 
 
