--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         background-size: cover;
       }
       .bgimg2 {
-        background-image: url(images/FONDO2.png);
+        background-image: url(images/FONDO3.png);
       }
       .btn-custom2 {
         display: inline-flex;
@@ -165,7 +165,7 @@
           <source src="images/SeeYouAgain.mp3" type="audio/mpeg" >
     </audio>
 
-    <img src="images/PORTADA.png" alt="Descripción de la imagen" class="w-100">
+    <img src="images/PORTADA1.png" alt="Descripción de la imagen" class="w-100">
     <!-- Wedding information ,<h1 class="w3-text-grey"> -->
     <div class="w3-container w3-padding-64 bgimg2 w3-center" id="wedding">
       <div class="w3-content">
@@ -294,6 +294,7 @@
   </script>
 
 </html>
+
 
 
 
