--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
       <div class="container mt-1">
     <div class="row">
         <div class="col-6 d-flex flex-column justify-content-center align-items-center" style="height: 150px;">
-            <img src="images/hombre.png" alt="Icono 1" style="width: 50px; height: 100px;">
+            <img src="images/H.png" alt="Icono 1" style="width: 50px; height: 100px;">
             <span class="mt-2">Hombre</span>
         </div>
         <div class="col-6 d-flex flex-column justify-content-center align-items-center" style="height: 150px;">
-            <img src="images/mujer.png" alt="Icono 2" style="width: 50px; height: 100px;">
+            <img src="images/M.png" alt="Icono 2" style="width: 50px; height: 100px;">
             <span class="mt-2">Mujer</span>
         </div>
     </div>
@@ -294,6 +294,7 @@
   </script>
 
 </html>
+
 
 
 
